@@ -7,3 +7,4 @@ import lang_pl
 import lang_pt
 import lang_zh
 import lang_bg
+import lang_ru
